# Haven

./: .gitignore  CODE_OF_CONDUCT.md  HACK_THE_APP.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_2026-04-05.md  TODO.md  TODO2.md  bunfig.toml  clear.bat  components.json  cspell.json  eslint.config.mjs  index.html  knip.json  package.json  public-key.asc  tsconfig.json  vite.config.ts  vitest.config.ts
.agent/: CONTINUITY.md
.github/: instructions.json
.github/workflows/: codeql.yml  nightly-release.yml  release.yml
dist-electron/: main.js  preload.js
electron/: changelog.ts  main.ts  preload.ts  secure-logger.ts  updater.ts
scripts/: apply-electron-fuses.cjs  build-bytecode.cjs  build-integrity-manifest.mjs  collect-tauri-bundles.mjs  compile-bytenode.mjs  dev-updater-ui.cjs  prepare-release-dir.mjs
src/: App.tsx  index.tsx  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src/components/ui/: changelog-modal.tsx  command-palette-field.tsx  tooltip.tsx
src/i18n/: de.ts  en.ts  index.ts
src/lib/: changelog.ts  theme.ts
src/lib/api/: abort.ts  auth.ts  chat.ts  client.ts  dm.ts  errors.ts  friends.ts  idempotency.ts  index.ts  models.ts  validation.ts
src/lib/auth/: session.ts  srp.ts
src/lib/cache/: offline-metadata.ts  profile-images.ts
src/lib/dm/: store.ts  (+1 more)
src/types/: electron.d.ts  libsodium-wrappers-sumo.d.ts
src/views/: Auth.tsx  DirectMessagesPanel.tsx  FriendsPanel.tsx  Home.tsx
(+25 files in other folders)
