[package]
name = "haven"
version = "0.1.0"
description = "Haven desktop application"
authors = ["Cloudly"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
webbrowser = "1"
